--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ warp = "0.3.6"
 tokio = { version = "1.36.0", features = ["full"] }
 serde_json = "1.0.115"
 reqwest = { version = "0.12.2", features = ["json"] }
+futures = "0.3.30"
